Adding preloader animation and removing CSRF check on APIs.

--- a/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <!-- Create and show the pre-loader animation before anything else -->
+  <link rel="stylesheet" href="../styles/preloader.css">
+  <div id="loader-wrapper">
+    <div id="loader"></div>
+  </div>
+  
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">  
